correction on tablet version

--- a/css/styleTablet.css
+++ b/css/styleTablet.css
@@ -22,7 +22,7 @@
 }
 
 #description {
-    right: 10vw;
+    right: 15vw;
     top: 9vw;
 }
 
